# SINproxy

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
certs/: debug_server.crt  debug_server.key  rootCA.crt  rootCA.key
sinproxy/: cli.py  config.py
sinproxy-android/: .gitignore  LICENSE  README.md  build.gradle
sinproxy-android/.github/workflows/: publish.yml
sinproxy-android/src/main/: AndroidManifest.xml
sinproxy-android/src/main/java/com/sinproxy/android/: SINProxyConfig.java
sinproxy-android/src/main/java/com/sinproxy/android/core/: ProxyHandler.java  Socks5Handler.java
sinproxy-android/src/main/java/com/sinproxy/android/security/: CertificateHelper.java
sinproxy-android/src/main/java/com/sinproxy/android/utils/: SINLog.java
sinproxy-android/src/main/java/com/sinproxy/android/vpn/: SINVpnService.java
sinproxy-desktop/: build.gradle
sinproxy-desktop/src/main/java/com/sinproxy/android/: SINProxyConfig.java
sinproxy-desktop/src/main/java/com/sinproxy/android/core/: SINProxyServer.java
sinproxy-desktop/src/main/java/com/sinproxy/android/desktop/: SINDesktopApp.java
sinproxy-desktop/src/main/java/com/sinproxy/android/security/: CertificateHelper.java
sinproxy-desktop/src/main/java/com/sinproxy/android/utils/: AssetManager.java  SINLog.java
sinproxy/core/: client.py  proxy.py  server.py
sinproxy/security/: certs.py
sinproxy/utils/: logger.py
